added contact us page

--- a/careers.html
+++ b/careers.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>GO-JEK Engineering</title>
+    <title>Careers - GO-JEK Engineering</title>
     <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -142,7 +142,7 @@ ga('send', 'pageview');
             <ul>
               <li><a href="http://www.go-jek.com">Home</a></li>
               <li><a href="http://blog.gojekengineering.com/">Blog</a></li>
-              <li><a href="http://www.go-jek.com/contact">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
