--- a/contact.html
+++ b/contact.html
@@ -4,41 +4,47 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
-    <title>GO-JEK Engineering</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+
+
+    <title>Contact Us - GO-JEK Engineering</title>
     <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
 ga('create', 'UA-75323807-1', 'auto');
 ga('send', 'pageview');
-
     </script>
     <meta charset="utf-8">
   </head>
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-xs-2">
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-xs-2">
           <h1 class="main-logo">GO-JEK</h1>
           <h3 class="sub-text center-block">ENGINEERING</h3>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-xs-2">
           <ul class="nav navbar-nav nav-links">
             <li>
               <a href="careers.html">CAREERS</a>
             </li>
-            <!--
-              <li>
+<!--
+            <li>
               <a href="team.html">TEAM</a>
-              </li>
-            -->
+            </li>
+-->
             <li>
               <a href="http://blog.gojekengineering.com/">BLOG</a>
             </li>
@@ -46,61 +52,69 @@ ga('send', 'pageview');
         </div>
       </div>
     </div>
-    <div class="top-separator"></div>
-    <div id="wrapper">
-      <div id="page-content-wrapper" style="padding-top: 0px;">
-        <div id="container" class="fp-content-container" style="height: 100%; position: relative;">
-          <div class="section relative fp-section fp-table active fp-completely" id="home1" style="height: 681px; padding-top: 65px;">
-            <div class="fp-tableCell" style="height: 576px;">
-              <div class="wrapper abs"></div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-5 pull-right text-right obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <h2 class="section-title1">GO-JEK ENGINEERING</h2>
-                    <p>
-                    GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population. 
-                    <p>
-                    With over 20 million downloads, the GO-JEK app has become the leading transport, courier, and hyperlocal shopping app in the country.
+    <div id="page-content-wrapper">
+      <div class="single-page">
+        <header class="with-img">
+          <div class="wrapper">
+          </div>
+        </header>
+        <section id="offices">
+          <div class="row">
+            <div class="col-md-4 col-sm-12 title">
+              <h2 class="section-title">
+                <span class="block-mobile">
+                  Details
+                </span>
+              </h2>
+            </div>
+            <div class="col-md-8 col-md-offset-4 office-wrapper">
+              <div class="row">
+                <div class="col-sm-4 col-xs-6 office">
+                  <h4 class="normal-font">Headquarters</h4>
+                  <div class="detail">
+                      Jl. South Kemang Raya 99 B 
+                      <br>
+                      South Jakarta 12730
+                  </div>
+                  <div class="detail">
+                    <br>
+                    <strong>Contact</strong>
+                    <br> +62857 2275 8883
+                  </div>
+                </div>
+                <div class="col-sm-4 col-xs-6 office">
+                  <h4 class="normal-font">Indonesia</h4>
+                  <div class="detail">
+                    Tajem Raya - Villa Soegi
+                    <br>
+                    Sleman Yogyakarta 55584 
+                  </div>
+                </div>
+                <div class="col-sm-4 col-xs-6 office">
+                  <h4 class="normal-font">India</h4>
+                  <div class="detail">
+                      630, 1st Main Road,
+                      <br>
+                      Indiranagar Stage 2,
+                      <br> Bangalore 560038
+                  </div>
+                  <div class="detail">
+                    <strong>Contact</strong>
+                    <br> +9180 4113 9525
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="section relative fp-section fp-table active fp-completely" id="home2" style="height: 681px; padding-top: 65px;">
-            <div class="fp-tableCell" style="height: 576px;">
-              <div class="wrapper abs"></div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-5 pull-left text-left obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <p>
-                    GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        </section>
       </div>
     </div>
-    </div>
-    <div class="container">
-      <h2 class="section-title"><b>FEATURED ON</b></h2>
-      <div class="logos">
-        <img class="large" src="assets/images/featured-logos.png" alt="GO-JEK was featured on">
-      </div>
-    </div>
-    <div class="container">
-      <h2 class="section-title"><b>INVESTORS</b></h2>
-      <div class="logos">
-        <img class="large1" src="assets/images/sequoia-mark-full-grey.svg" >
-      </div>
-    </div>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-menu footer-logo">
             <h1 class="main-logo">
-              <h3 class="sub-text center-block">ENGINEERING</h3>
+            <h3 class="sub-text center-block">ENGINEERING</h3>
             </h1>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
@@ -112,7 +126,7 @@ ga('send', 'pageview');
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
-              <li><i><b>Find Us On</b></i></li>
+              <li><b>Find Us On</b></li>
               <li><a href="https://twitter.com/GojekTech?lang=id" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
             </ul>
           </div>
@@ -135,6 +149,6 @@ ga('send', 'pageview');
       </div>
       <div class="copyright">© Copyright 2016 GO-JEK Indonesia</div>
     </footer>
-
   </body>
 </html>
+
