--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ ga('send', 'pageview');
         <div class="col-md-4 col-sm-4">
           <ul class="nav navbar-nav nav-links">
             <li>
+              <a href="http://gojekengineering.com">HOME</a>
+            </li>
+            <li>
               <a href="careers.html">CAREERS</a>
             </li>
             <!--
