--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ga('send', 'pageview');
         <div class="col-md-4 col-sm-4">
         </div>
         <div class="col-md-4 col-sm-4">
-          <h1 class="main-logo">GO-JEK</h1>
+          <h1 class="main-logo"></h1>
           <h3 class="sub-text center-block">ENGINEERING</h3>
         </div>
         <div class="col-md-4 col-sm-4">
@@ -59,23 +59,23 @@ ga('send', 'pageview');
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 pull-right text-right obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <h2 class="section-title1">GO-JEK ENGINEERING</h2>
-                    <p>
+                    <h2 class="section-title1 in-front-font">GO-JEK ENGINEERING</h2>
+                    <p class="in-front-font">
                     GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population. 
-                    <p>
+                    <p class="in-front-font">
                     With over 20 million downloads, the GO-JEK app has become the leading transport, courier, and hyperlocal shopping app in the country.
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="section relative fp-section fp-table active fp-completely" id="home2" style="height: 681px; padding-top: 65px;">
+          <div class="section relative fp-section fp-table active fp-completely img2" id="home2" style="height: 681px; padding-top: 65px;">
             <div class="fp-tableCell" style="height: 576px;">
               <div class="wrapper abs"></div>
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 pull-left text-left obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <p>
+                    <p class="in-front-font">
                     GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
                   </div>
                 </div>
