mail-id changed to work[at]go-jek[dot]com to avoid spamming from bots

--- a/careers.html
+++ b/careers.html
@@ -63,8 +63,8 @@ ga('send', 'pageview');
           <div class="text-center">
             <div class="heading">
               <p>We are looking for passionate full stack programmers, analysts, designers, data scientists and product managers. You can find detailed job descriptions for each role below.
-              <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@go-jek.com" class="email">work@go-jek.com</a>
-            </div
+              <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@go-jek.com" class="email">work [at] go-jek [dot] com</a>
+            </div>
             <br><br>
             <div class="row">
               <div class="col-centered">
