--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@ ga('send', 'pageview');
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-6 footer-menu">
+          <ul class="nav navbar-nav nav-links">
+            <li>
+              <a href="http://gojekengineering.com" type="button" class="btn btn-success">HOME</a>
+            </li>
+          </ul>
         </div>
         <div class="col-md-4 col-sm-4">
           <h1 class="main-logo"></h1>
@@ -38,7 +43,7 @@ ga('send', 'pageview');
               <a href="careers.html">CAREERS</a>
             </li>
             <!--
-              <li>
+            <li>
               <a href="team.html">TEAM</a>
               </li>
             -->
