--- a/careers.html
+++ b/careers.html
@@ -27,35 +27,28 @@ ga('send', 'pageview');
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+		<header class="navbar-default navbar-static-top navbar-custom">
       <div class="container">
-        <div class="col-md-4 col-xs-2">
+  			<div class="navbar-header">
+  				<button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
+    				<span class="sr-only">Toggle navigation</span>
+    				<span class="icon-bar"></span>
+  	  			<span class="icon-bar"></span>
+  		  		<span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand main-logo" href="index.html">
+            <img class="img-responsive" src="assets/images/gojek-engg-logo.png" alt="Gojek Engineering Logo">
+          </a>
         </div>
-        <div class="col-md-4 col-xs-2">
-          <h1 class="main-logo">GO-JEK</h1>
-          <h3 class="sub-text center-block">ENGINEERING</h3>
-        </div>
-        <div class="col-md-4 col-xs-2">
-          <ul class="nav navbar-nav nav-links">
-            <li>
-              <a href="http://gojekengineering.com">HOME</a>
-            </li>
-            <li>
-              <a href="careers.html">CAREERS</a>
-            </li>
-<!--
-            <li>
-              <a href="team.html">TEAM</a>
-            </li>
--->
-            <li>
-              <a href="http://blog.gojekengineering.com/">BLOG</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="top-separator"></div>
+  			<nav class="collapse navbar-collapse" id="bs-navbar">
+			  	<ul class="nav navbar-nav nav-links navbar-right">
+			  		<li><a href="index.html">Home</a></li>
+			  		<li><a href="careers.html">Careers</a></li>
+			  		<li><a href="http://blog.gojekengineering.com/">Blog</a></li>
+			  	</ul>
+		  	</nav>
+			</div>
+		</header>
     <main>
       <div class="content container">
 	      <div id="careers">
@@ -137,9 +130,7 @@ ga('send', 'pageview');
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-menu footer-logo">
-            <h1 class="main-logo">
-            <h3 class="sub-text center-block">ENGINEERING</h3>
-            </h1>
+            <img class="img-responsive" src="assets/images/gojek-engg-logo.png" alt="Gojek Engineering Logo">
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
