minor fixes including image gradients and navbar background
Signed-off-by: vjdhama <vjdhama26@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ ga('send', 'pageview');
   <body>
 		<header class="navbar-default navbar-static-top navbar-custom">
       <div class="container">
-  			<div class="navbar-header">
+  			<div class="navbar-header header">
   				<button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
     				<span class="sr-only">Toggle navigation</span>
     				<span class="icon-bar"></span>
@@ -52,10 +52,10 @@ ga('send', 'pageview');
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 pull-right text-right obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <h2 class="section-title1 in-front-font">GO-JEK ENGINEERING</h2>
-                    <p class="in-front-font">
+                    <h2 class="section-title1">GO-JEK ENGINEERING</h2>
+                    <p class="front-content">
                     GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population.
-                    <p class="in-front-font">
+                    <p class="front-content">
                     With over 20 million downloads, the GO-JEK app has become the leading transport, courier, and hyperlocal shopping app in the country.
                   </div>
                 </div>
@@ -68,8 +68,12 @@ ga('send', 'pageview');
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 pull-left text-left obj up fadeInUp run_animation content-format" style="opacity: 1;">
-                    <p class="in-front-font">
-                    GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
+                    <p class="front-content">
+                     GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. 
+                     <br>
+                     <br>
+                     It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
+                    </p>
                   </div>
                 </div>
               </div>
