[Akshat] Add tab on homepage for events page

--- a/careers.html
+++ b/careers.html
@@ -45,7 +45,8 @@ ga('send', 'pageview');
 			  		<li><a href="index.html">Home</a></li>
 			  		<li><a href="careers.html">Careers</a></li>
 			  		<li><a href="http://blog.gojekengineering.com/">Blog</a></li>
-			  	</ul>
+            <li><a href="events.html">Events</a></li>
+			  	</ul >
 		  	</nav>
 			</div>
 		</header>
