--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>Contact Us - GO-JEK Engineering</title>
+    <title>Careers - GO-JEK Engineering</title>
     <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -46,74 +46,27 @@ ga('send', 'pageview');
 			  		<li><a href="careers.html">Careers</a></li>
 			  		<li><a href="http://blog.gojekengineering.com/">Blog</a></li>
             <li><a href="events.html">Events</a></li>
-			  	</ul>
+          </ul>
 		  	</nav>
 			</div>
 		</header>
-    <div id="page-content-wrapper">
-      <div class="single-page">
-        <header class="with-img">
-          <div class="wrapper">
+    <main>
+      <div class="content container">
+	      <div id="events">
+          <h1>EVENTS</h1>
+          <div class="text-center">
+            <div class="heading">
+              Coming Soon
+            <br><br>
           </div>
-        </header>
-        <section id="offices">
-          <div class="row">
-            <div class="col-md-4 col-sm-12 title">
-              <h2 class="section-title">
-                <span class="block-mobile">
-                  Details
-                </span>
-              </h2>
-            </div>
-            <div class="col-md-8 col-md-offset-4 office-wrapper">
-              <div class="row">
-                <div class="col-sm-4 col-xs-6 office">
-                  <h4 class="normal-font">Headquarters</h4>
-                  <div class="detail">
-                      Jl. South Kemang Raya 99 B
-                      <br>
-                      South Jakarta 12730
-                  </div>
-                  <div class="detail">
-                    <br>
-                    <strong>Contact</strong>
-                    <br> +62857 2275 8883
-                  </div>
-                </div>
-                <div class="col-sm-4 col-xs-6 office">
-                  <h4 class="normal-font">Indonesia</h4>
-                  <div class="detail">
-                    Tajem Raya - Villa Soegi
-                    <br>
-                    Sleman Yogyakarta 55584
-                  </div>
-                </div>
-                <div class="col-sm-4 col-xs-6 office">
-                  <h4 class="normal-font">India</h4>
-                  <div class="detail">
-                      630, 1st Main Road,
-                      <br>
-                      Indiranagar Stage 2,
-                      <br> Bangalore 560038
-                  </div>
-                  <div class="detail">
-                    <strong>Contact</strong>
-                    <br> +9180 4113 9525
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+        </div>
       </div>
-    </div>
+    </main>
     <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-menu footer-logo">
-            <h1 class="main-logo">
-            <h3 class="sub-text center-block">ENGINEERING</h3>
-            </h1>
+            <img class="img-responsive" src="assets/images/gojek-engg-logo.png" alt="Gojek Engineering Logo">
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
@@ -124,7 +77,7 @@ ga('send', 'pageview');
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
-              <li><b><i>Find Us On</i></b></li>
+              <li><b>Find Us On</b></li>
               <li><a href="https://twitter.com/GojekTech?lang=id" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
             </ul>
           </div>
@@ -147,6 +100,7 @@ ga('send', 'pageview');
       </div>
       <div class="copyright">© Copyright 2016 GO-JEK Indonesia</div>
     </footer>
+
   </body>
 </html>
 
