--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ ga('send', 'pageview');
 			  		<li><a href="index.html">Home</a></li>
 			  		<li><a href="careers.html">Careers</a></li>
 			  		<li><a href="http://blog.gojekengineering.com/">Blog</a></li>
+            <li><a href="events.html">Events</a></li>
 			  	</ul>
 		  	</nav>
 			</div>
