--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
     <title>GO-JEK Engineering</title>
     <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-75323807-1', 'auto');
-ga('send', 'pageview');
+      ga('create', 'UA-75323807-1', 'auto');
+      ga('send', 'pageview');
 
     </script>
     <meta charset="utf-8">
@@ -70,7 +71,7 @@ ga('send', 'pageview');
                 <div class="row">
                   <div class="col-md-5 pull-left text-left obj up fadeInUp run_animation content-format" style="opacity: 1;">
                     <p class="front-content">
-                     GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. 
+                     GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface.
                      <br>
                      <br>
                      It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
