--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
     <title>GO-JEK Engineering</title>
     <script>
@@ -21,30 +20,31 @@
     </script>
     <meta charset="utf-8">
   </head>
+
   <body>
-		<header class="navbar-default navbar-static-top navbar-custom">
+    <nav class="navbar navbar-default navbar-static-top navbar-custom">
       <div class="container">
-  			<div class="navbar-header header">
-  				<button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
-    				<span class="sr-only">Toggle navigation</span>
-    				<span class="icon-bar"></span>
-  	  			<span class="icon-bar"></span>
-  		  		<span class="icon-bar"></span>
+        <div class="navbar-header">
+          <button aria-controls="navbar" aria-expanded="false" class="hamburger collapsed navbar-toggle" data-target="#navbar" data-toggle="collapse" type="button">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand main-logo" href="index.html">
-            <img class="img-responsive" src="assets/images/gojek-engg-logo.png" alt="Gojek Engineering Logo">
+          <a class="navbar-brand logo-container" href="/">
+            <img class="img-responsive main-logo" src="assets/images/gojek-engg-logo-resized.png" alt="GO-JEK Engineering">
           </a>
         </div>
-  			<nav class="collapse navbar-collapse" id="bs-navbar">
-			  	<ul class="nav navbar-nav nav-links navbar-right">
-			  		<li><a href="index.html">Home</a></li>
-			  		<li><a href="careers.html">Careers</a></li>
-			  		<li><a href="http://blog.gojekengineering.com/">Blog</a></li>
-            <li><a href="events.html">Events</a></li>
-			  	</ul>
-		  	</nav>
-			</div>
-		</header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/">Home</a></li>
+            <li><a href="/careers.html">Careers</a></li>
+            <li><a href="//blog.gojekengineering.com/">Blog</a></li>
+            <li><a href="/events.html">Events</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div id="wrapper">
       <div id="page-content-wrapper" style="padding-top: 0px;">
         <div id="container" class="fp-content-container" style="height: 100%; position: relative;">
