--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,24 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
-    <link href='assets/css/index.css' rel='stylesheet'>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-
-
+    <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href='assets/css/index.css' rel='stylesheet'>
     <title>Contact Us - GO-JEK Engineering</title>
     <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-75323807-1', 'auto');
-ga('send', 'pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-75323807-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
     <meta charset="utf-8">
   </head>
+
   <body>
 		<header class="navbar-default navbar-static-top navbar-custom">
       <div class="container">
@@ -37,7 +32,7 @@ ga('send', 'pageview');
   		  		<span class="icon-bar"></span>
           </button>
           <a class="navbar-brand main-logo" href="index.html">
-            <img class="img-responsive" src="assets/images/gojek-engg-logo.png" alt="Gojek Engineering Logo">
+            <img class="img-responsive main-logo" src="assets/images/gojek-engg-logo-resized.png" alt="GO-JEK Engineering">
           </a>
         </div>
   			<nav class="collapse navbar-collapse" id="bs-navbar">
